--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -15,6 +15,7 @@
       %li{:class=>'password optional'}
         = label_tag t('site.old_password')
         = password_field_tag 'old_password', '', :size => 50, :maxlength=>20
+        %p{:class => 'inline-hints'}没有设置则不填
       = f.input :operate_password, :input_html => { :maxlength=>20 }
 
     - if session[:user_edit_mode].nil?
