--- a/app/views/account/_trades.html.haml
+++ b/app/views/account/_trades.html.haml
@@ -3,11 +3,11 @@
   %thead
     %tr
       %th=t 'site.login_name'
-      %th=t 'global.price'
+      %th=t 'global.quantity'
+      %th=t 'global.type'
       %th=t 'trade.transaction_id'
       %th=t 'trade.charged_at'
       %th=t 'global.status'
-      %th=t 'global.type'
       %th{:colspan=>3}
 
   - @trades.each do |t|
@@ -15,10 +15,10 @@
     %tr{:class=>c}
       %td= t.user.username
       %td= t.price
+      %td= trade_type_image(t.trade_type)
       %td= t.transaction_id
       %td= l t.created_at, :format => :long
-      %td= t.status
-      %td= t.trade_type
+      %td= t.local_status
       %td= link_to t('global.delete'), :controller => 'account', :action => 'delete_charge', :id => t if t.trade_type == 'charge' and t.request?
       - if (admin? or manager?) and t.request?
         %td
