--- a/app/views/participants/_parts.html.haml
+++ b/app/views/participants/_parts.html.haml
@@ -4,7 +4,7 @@
     %thead
       %tr
         %th= t 'formtastic.labels.participant.part_type'
-        %th= t 'formtastic.labels.participant.name'
+        %th= t 'formtastic.labels.participant.part_id'
         %th= t 'formtastic.labels.participant.status'
         %th= t 'formtastic.labels.participant.active'
         %th= t 'global.task'
@@ -15,14 +15,14 @@
     - @participants.each do |participant|
       %tr
         %td= participant.part_type
-        %td= participant.name
+        %td= participant.part_id
         %td= participant.status
-        %td= participant.active
+        %td= convert_yes_no(participant.active)
         %td= participant.tasks.length
         %td= l participant.created_at, :format => :short
-        %td= link_to t('global.show'), participant
-        %td= link_to t('global.edit'), edit_participant_path(participant)
-        %td= link_to t('global.delete'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
+        %td= link_to image_tag('view.png'), participant
+        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
   = will_paginate @participants
 
 #equal-right
@@ -31,7 +31,7 @@
     %thead
       %tr
         %th= t 'formtastic.labels.participant.part_type'
-        %th= t 'formtastic.labels.participant.name'
+        %th= t 'formtastic.labels.participant.part_id'
         %th= t 'formtastic.labels.participant.status'
         %th= t 'formtastic.labels.participant.active'
         %th= t 'global.task'
@@ -42,12 +42,12 @@
     - @shops.each do |participant|
       %tr
         %td= participant.part_type
-        %td= participant.name
+        %td= participant.part_id
         %td= participant.status
-        %td= participant.active
-        %td= Task.where(:shop => participant.name).length
+        %td= convert_yes_no(participant.active)
+        %td= Task.where(:shop => participant.part_id).length
         %td= l participant.created_at, :format => :short
-        %td= link_to t('global.show'), participant
-        %td= link_to t('global.edit'), edit_participant_path(participant)
-        %td= link_to t('global.delete'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
+        %td= link_to image_tag('view.png'), participant
+        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
   = will_paginate @shops
