--- a/public/stylesheets/formtastic_changes.css
+++ b/public/stylesheets/formtastic_changes.css
@@ -13,3 +13,32 @@ form.formtastic fieldset ol li fieldset legend { margin-left: -6px;}
 
 --------------------------------------------------------------------------------------------------*/
 form.formtastic fieldset > ol > li.text textarea { width:50%; }
+
+/*input[type='text']{
+        font-size: 10px;
+}*/
+
+form.formtastic fieldset.inputs { 
+        width: 90%;
+        padding: 5px;
+        margin-top: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+        border: 1px dashed #92cdec;
+}
+
+form.formtastic input{
+        border: 1px solid black;
+        padding: 5px;
+}
+
+form.formtastic{
+        border: none;
+        background: inherit;
+}
+
+label{
+        text-align: right;
+        margin-right: 1px;
+}
+
