--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,20 +8,19 @@
     = javascript_include_tag 'jquery.validationEngine'
     = javascript_include_tag 'jquery.validationEngine-zh'
     = stylesheet_link_tag 'validationEngine.jquery'
-    =# stylesheet_link_tag 'template'
-    = javascript_include_tag 'site'
 
     = javascript_include_tag 'rails'
+    = stylesheet_link_tag 'formtastic','formtastic_changes'
     = formtastic_stylesheet_link_tag
     = include_tiny_mce_if_needed
 
-    = javascript_include_tag 'infogrid', 'fmenu', 'jquery.jnotify.min', 'slideshow', 'des', 'news', 'jquery.easyListSplitter'
-    = stylesheet_link_tag 'infogrid', 'fmenu', 'jquery.jnotify.min', 'scroller', 'news', 'simpleTicker'
+    = javascript_include_tag 'infogrid', 'fmenu', 'jquery.jnotify.min', 'slideshow', 'des', 'jquery.easyListSplitter','jquery-ui-1.8.12.custom.min'
+    = stylesheet_link_tag 'infogrid', 'fmenu', 'jquery.jnotify.min', 'scroller', 'news', 'simpleTicker', 'smoothness/jquery-ui-1.8.12.custom'
 
     =# javascript_include_tag 'jcarousellite_1.0.1c4'
     =# javascript_include_tag 'ticker'
 
-    = stylesheet_link_tag 'formtastic','formtastic_changes'
+    = javascript_include_tag 'site'
 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
@@ -134,6 +133,10 @@
               %li
                 %span.head_menu
                   = link_to t('site.admin'), '/admin'
+                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                .sub_menu
+                  = link_to t('site.admin'), '/admin'
+                  = link_to t('site.roles'), '/t/roles'
 
       - if flash[:notice]
         #notice
